--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "@olafw/v2-lib",
-  "version": "0.1.0--alpha.4",
-  "description": "This library is test version based on Vue 2.x.",
+  "version": "0.1.0--alpha.5",
+  "description": "This library is a test version based on Vue.js 2.x.",
   "keywords": [
     "vue",
+    "plugin",
     "lib",
     "test"
   ],
