add vuepress document site

--- a/package.json
+++ b/package.json
@@ -19,17 +19,18 @@
     "url": "https://github.com/olaf-miracle/v2-lib/issue"
   },
   "files": [
-    "lib",
-    "src"
+    "lib"
   ],
   "main": "lib/v2Lib.umd.min.js",
   "scripts": {
-    "clean": "rm -rf node_modules && rm -rf lib",
-    "init": "yarn clean && yarn install",
+    "clean": "rm -rf node_modules && rm -rf lib && rm -rf ./docs/.vuepress/dist",
+    "start": "yarn clean && yarn install",
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build --target lib --name v2Lib src/main.js",
     "lint": "vue-cli-service lint",
-    "test": "node test.js"
+    "test": "node test.js",
+    "docs:dev": "vuepress dev docs",
+    "docs:build": "vuepress build docs",
+    "build": "vue-cli-service build --target lib --name v2Lib src/main.js"
   },
   "dependencies": {
     "core-js": "^3.6.5"
@@ -43,7 +44,8 @@
     "eslint-plugin-vue": "^6.2.2",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "vuepress": "^1.6.0"
   },
   "peerDependencies": {
     "vue": "^2.6.11"
